--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -14,6 +14,21 @@
   number = {3}
 }
 
+@article{baker.etal2017,
+  title = {Rational Quantitative Attribution of Beliefs, Desires and Percepts in Human Mentalizing},
+  author = {Baker, Chris L. and {Jara-Ettinger}, Julian and Saxe, Rebecca and Tenenbaum, Joshua B.},
+  year = {2017},
+  month = apr,
+  volume = {1},
+  pages = {0064},
+  issn = {2397-3374},
+  doi = {10.1038/s41562-017-0064},
+  file = {/Users/dmpowell/Zotero/storage/QP8B68ML/Baker et al. - 2017 - Rational quantitative attribution of beliefs, desi.pdf},
+  journal = {Nature Human Behaviour},
+  language = {en},
+  number = {4}
+}
+
 @article{battaglia.etal2013,
   title = {Simulation as an Engine of Physical Scene Understanding},
   author = {Battaglia, Peter W. and Hamrick, Jessica B. and Tenenbaum, Joshua B.},
@@ -389,7 +404,7 @@
   number = {9}
 }
 
-@article{horne.etal2015a,
+@article{horne.etal2015,
   title = {Countering Antivaccination Attitudes},
   author = {Horne, Zachary and Powell, Derek and Hummel, John E. and Holyoak, Keith J.},
   year = {2015},
@@ -440,6 +455,21 @@
   journal = {Judgment and Decision Making},
   language = {en},
   number = {4}
+}
+
+@incollection{keil1994,
+  title = {The Birth and Nurturance of Concepts by Domains: {{The}} Origins of Concepts of Living Things},
+  shorttitle = {The Birth and Nurturance of Concepts by Domains},
+  booktitle = {Mapping the {{Mind}}},
+  author = {Keil, Frank C.},
+  editor = {Hirschfeld, Lawrence A. and Gelman, Susan A.},
+  year = {1994},
+  month = apr,
+  edition = {First},
+  pages = {234--254},
+  publisher = {{Cambridge University Press}},
+  doi = {10.1017/CBO9780511752902.010},
+  isbn = {978-0-521-41966-6 978-0-521-42993-1 978-0-511-75290-2}
 }
 
 @article{kunda1990,
@@ -572,11 +602,11 @@
   number = {6}
 }
 
-@book{pearl2014,
+@book{pearl1988,
   title = {Probabilistic Reasoning in Intelligent Systems: Networks of Plausible Inference},
   shorttitle = {Probabilistic Reasoning in Intelligent Systems},
   author = {Pearl, Judea},
-  year = {2014},
+  year = {1988},
   annotation = {OCLC: 1099309722},
   isbn = {978-0-08-051489-5},
   language = {English}
@@ -620,7 +650,7 @@
   language = {eng}
 }
 
-@article{quine1951a,
+@article{quine1951,
   title = {Two {{Dogmas}} of {{Empiricism}}},
   shorttitle = {Main {{Trends}} in {{Recent Philosophy}}},
   author = {Quine, W. V.},
@@ -664,7 +694,7 @@
   series = {Chapman and {{Hall}}/{{CRC}} Texts in Statistical Science}
 }
 
-@article{scutari2010a,
+@article{scutari2010,
   title = {Learning {{Bayesian Networks}} with the Bnlearn {{R Package}}},
   author = {Scutari, Marco},
   year = {2010},
@@ -695,6 +725,23 @@
   journal = {Cognition},
   language = {en},
   number = {1}
+}
+
+@article{ullman.etal2017,
+  title = {Mind {{Games}}: {{Game Engines}} as an {{Architecture}} for {{Intuitive Physics}}},
+  shorttitle = {Mind {{Games}}},
+  author = {Ullman, Tomer D. and Spelke, Elizabeth and Battaglia, Peter and Tenenbaum, Joshua B.},
+  year = {2017},
+  month = sep,
+  volume = {21},
+  pages = {649--665},
+  issn = {1364-6613},
+  doi = {10.1016/j.tics.2017.05.012},
+  abstract = {We explore the hypothesis that many intuitive physical inferences are based on a mental physics engine that is analogous in many ways to the machine physics engines used in building interactive video games. We describe the key features of game physics engines and their parallels in human mental representation, focusing especially on the intuitive physics of young infants where the hypothesis helps to unify many classic and otherwise puzzling phenomena, and may provide the basis for a computational account of how the physical knowledge of infants develops. This hypothesis also explains several `physics illusions', and helps to inform the development of artificial intelligence (AI) systems with more human-like common sense.},
+  file = {/Users/dmpowell/Zotero/storage/7CGM86GL/S1364661317301134.html},
+  journal = {Trends in Cognitive Sciences},
+  language = {en},
+  number = {9}
 }
 
 @misc{vaccineknowledgeproject2019,
@@ -838,5 +885,3 @@
   file = {/Users/dmpowell/Documents/Papers/Williamson - Bayesian Networks for Logical Reasoning 2.pdf},
   language = {en}
 }
-
-
