--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -21,7 +21,7 @@ One remarkable feature of human psychology is our ability to form rich mental re
 
 Because intuitive theories are powerful tools for making sense of the world, when these theories are mistaken there can be serious consequences. In this paper, we focus on a timely example: misconceptions about vaccine safety. 
 
-Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over 1000 children across the United States in 2019, and over 80,000 children across Europe in 2018 (WHO, 2018). Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @horne.etal2015; @vannice.etal2011; @wallace.etal2006; @dube.etal2015]. This is especially  sobering in the context of the coronavirus pandemic: reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed millions of lives around the world.
+Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over 1000 children across the United States in 2019, and over 80,000 children across Europe in 2018 [@thornton2019]. Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @horne.etal2015; @vannice.etal2011; @wallace.etal2006; @dube.etal2015]. This is especially  sobering in the context of the coronavirus pandemic: reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed millions of lives around the world.
 
 The difficulty of convincing people to vaccinate themselves and their children illustrates a general pattern of findings showing that people often do not respond to evidence in ways that educators might wish [e.g. @lewandowsky.etal2012]. Part of the challenge in correcting misconceptions is that they are situated within larger, internally coherent belief systems---intuitive theories---that guide how people interpret and respond to evidence [e.g., @lewandowsky.etal2012; @jern.etal2014; @gershman2019]. 
 
