--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -727,6 +727,18 @@
   number = {1}
 }
 
+@article{thornton2019,
+  title = {Measles Cases in {{Europe}} Tripled from 2017 to 2018},
+  author = {Thornton, Jacqui},
+  year = {2019},
+  month = feb,
+  pages = {l634},
+  issn = {0959-8138, 1756-1833},
+  doi = {10.1136/bmj.l634},
+  journal = {BMJ},
+  language = {en}
+}
+
 @article{ullman.etal2017,
   title = {Mind {{Games}}: {{Game Engines}} as an {{Architecture}} for {{Intuitive Physics}}},
   shorttitle = {Mind {{Games}}},
